fix: align items in desktop header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ header {
     box-shadow: 0 1px 15px #3a3a3a;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
 }
 
 #header-notice {
@@ -315,6 +315,10 @@ footer {
     
     #menu .active {
         color: #919F93;
+    }
+
+    #logo img {
+        width: 200px;
     }
    
     /* Content */ 
